2010-04-02  Juanma Barranquero  <lekktu@gmail.com>

	* cedet/semantic/imenu.el (semantic-imenu-bucketize-type-members)
	(semantic-create-imenu-directory-index): Fix typos in docstrings.
	(semantic-imenu-goto-function): Reflow docstring.

2010-03-30  Tomas Abrahamsson  <tab@lysator.liu.se>

	* textmodes/artist.el (artist-mode): Fix typo in docstring.
	Reported by Alex Schröder <kensanata@gmail.com>.  (Bug#5807)

2010-03-30  Kenichi Handa  <handa@m17n.org>

	* language/sinhala.el (composition-function-table): Fix regexp for
	the new Unicode specification.

	* language/indian.el (devanagari-composable-pattern)
	(tamil-composable-pattern, kannada-composable-pattern)
	(malayalam-composable-pattern): Adjust for the new Unicode
	specification.
	(bengali-composable-pattern, gurmukhi-composable-pattern)
	(gujarati-composable-pattern, oriya-composable-pattern)
	(telugu-composable-pattern): New variables to cope with the new
	Unicode specification.  Use them in composition-function-table.

2010-03-29  Stefan Monnier  <monnier@iro.umontreal.ca>

	Make tmm-menubar work for the Buffers menu again.
	* tmm.el (tmm-prompt): Also handle keymap entries in the form of
	vectors rather than cons cells, as used in menu-bar-update-buffers.

2010-03-28  Chong Yidong  <cyd@stupidchicken.com>

	* progmodes/js.el (js-auto-indent-flag, js-mode-map)
	(js-insert-and-indent): Revert 2009-08-15 change, restoring
	electric punctuation for "{}();,:" (Bug#5586).

	* mail/sendmail.el (mail-default-directory): Doc fix.

2010-03-27  Chong Yidong  <cyd@stupidchicken.com>

	* mail/sendmail.el (mail-default-directory): Doc fix.

2010-03-27  Eli Zaretskii  <eliz@gnu.org>

	* subr.el (version-regexp-alist, version-to-list)
	(version-list-<, version-list-=, version-list-<=)
	(version-list-not-zero, version<, version<=, version=): Doc fix.
	(Bug#5744).

2010-03-26  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>
            Nick Roberts  <nickrob@snap.net.nz>
